# ChangeLog for app-editors/emacs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.662 2015/03/27 10:18:21 ago Exp $

  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> emacs-23.4-r13.ebuild,
  emacs-24.4-r4.ebuild:
  Stable for x86, wrt bug #544448

  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> emacs-23.4-r13.ebuild,
  emacs-24.4-r4.ebuild:
  Stable for amd64, wrt bug #544448

*emacs-24.4-r4 (07 Mar 2015)
*emacs-23.4-r13 (07 Mar 2015)

  07 Mar 2015; Ulrich Müller <ulm@gentoo.org> +emacs-23.4-r13.ebuild,
  +emacs-24.4-r4.ebuild:
  Fix browse-url-firefox for firefox 36, bug 542046.

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> emacs-24.4-r1.ebuild:
  Stable for ppc, wrt bug #531806

  28 Feb 2015; Ulrich Müller <ulm@gentoo.org> emacs-23.4-r12.ebuild,
  emacs-24.4-r3.ebuild:
  Update version of emacs-common-gentoo dependency.

  27 Feb 2015; Ulrich Müller <ulm@gentoo.org> emacs-24.4-r3.ebuild:
  Call eautoreconf after patching.

*emacs-24.4-r3 (21 Feb 2015)
*emacs-23.4-r12 (21 Feb 2015)

  21 Feb 2015; Ulrich Müller <ulm@gentoo.org> +emacs-23.4-r12.ebuild,
  -emacs-24.4-r2.ebuild, +emacs-24.4-r3.ebuild:
  Follow QA policy for game state directory, bug 537580.

  17 Feb 2015; Ulrich Müller <ulm@gentoo.org> emacs-23.4-r11.ebuild,
  emacs-24.3-r6.ebuild, emacs-24.4-r1.ebuild, emacs-24.4-r2.ebuild:
  Depend on slot 0 of media-libs/tiff.

  25 Jan 2015; Ulrich Müller <ulm@gentoo.org> metadata.xml:
  Update flag description.

*emacs-24.4-r2 (23 Jan 2015)

  23 Jan 2015; Ulrich Müller <ulm@gentoo.org> +emacs-24.4-r2.ebuild:
  Don't shadow load-path in gnus, bug 537156.

  02 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> emacs-24.4-r1.ebuild:
  x86 stable wrt bug #531806

  26 Dec 2014; Markus Meier <maekke@gentoo.org> emacs-24.4-r1.ebuild:
  arm stable, bug #531806

  09 Dec 2014; Jeroen Roovers <jer@gentoo.org> emacs-24.4-r1.ebuild:
  Stable for HPPA (bug #531806).
